@@ -1,6 +1,7 @@
 2009-05-20: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM.pm: rewrite the description section of the Mail::DKIM
    man page
+ * lib/Mail/DKIM/Verifier.pm: document fetch_author_domain_policies()
 
 2009-05-18: Jason Long <jlong@messiah.edu>
  * t/signer.t: add a test-case of a message without a header
